# liblockdc

./: .clangd  .gitignore  CMakeLists.txt  CMakePresets.json  Makefile  README.md  TODO.md  docker-compose.yaml  lockdc.rockspec.in
bench/: CMakeLists.txt  bench_main.c
cmake/: LcDependencies.cmake  LcVersion.cmake  install_vendored_sdk_dev_artifacts.cmake.in  install_vendored_sdk_runtime_artifacts.cmake.in  lc_version.h.in  lockdc.pc.in  lockdcConfig.cmake.in  package_archive.cmake  package_checksums.cmake  package_clean_dist.cmake  package_darwin_smoke_bundle.cmake  package_dev.cmake  package_lua_rock.cmake  package_metadata.cmake.in  package_runtime.cmake  patch_libssh2_single_pass.cmake  patch_openssl_buildinfo.cmake  patch_zlib_single_pass.cmake  prune_dependency_install_tree.cmake  strip_dependency_install_tree.cmake  strip_release_target.cmake
cmake/toolchains/: aarch64-linux-gnu.cmake  aarch64-linux-musl.cmake  arm64-apple-darwin.cmake  armhf-linux-gnu.cmake  armhf-linux-musl.cmake  x86_64-linux-gnu.cmake  x86_64-linux-musl.cmake
devenv/: README.md
docs/: lua.md
examples/: CMakeLists.txt  acquire_for_update.c  acquire_lease_lifecycle.c  client_and_lease_methods.c  consumer_service.c  curl_fetch_into_lockd.c  local_mutate.c  management_admin.c  queue_subscribe_stream.c  startconsumer.c  state_stream_roundtrip.c
examples/data/: state_stream_input.json
examples/lua/: README.md  acquire_for_update.lua  acquire_update_json.lua  consumer_handler.lua  namespace_config.lua  queue_roundtrip.lua
include/lc/: lc.h
lua/lockdc/: init.lua
scripts/: build.sh  build_lockdc_lua_rock.sh  clean.sh  compose.sh  coverage_report.sh  cross_build.sh  cross_test.sh  deps.sh  dev-down.sh  dev-e2e.sh  dev-ps.sh  dev-reset.sh  dev-up.sh  fuzz.sh  host_test.sh  osxcross_available.sh  package-verify.sh  package.sh  release.sh  run_linux_build_matrix.sh  run_linux_package_matrix.sh  run_linux_release_matrix.sh  run_timed.sh  test.sh  validate_lockdc_luarocks.sh  world.sh
skills/draft-liblockdc-release/: SKILL.md
skills/draft-liblockdc-release/agents/: openai.yaml
skills/draft-liblockdc-release/scripts/: draft_liblockdc_release.sh
src/: lc_allocator.c  lc_api.c  lc_api_internal.h  lc_attachment_api.c  lc_client_api.c  lc_client_management_api.c  lc_consumer_service.c  lc_core.c  lc_engine_api.h  lc_intcompat.c  lc_intcompat.h  lc_internal.h  lc_lease_api.c  lc_local_mutate_api.c  lc_log.c  lc_log.h  lc_lonejson.c  lc_management_api.c  lc_message_api.c  lc_mutate_stream.c  lc_mutate_stream.h  lc_queue_api.c  lc_queue_stream_api.c  lc_state_api.c  lc_streaming.c  lc_transport.c
src/lua/: lockdc_lua.c
tests/: CMakeLists.txt  arch_alias_configure_test.cmake  c_only_configure_test.cmake  coverage_pkgconfig_metadata_test.cmake  cross_test_targeting_test.cmake  curl_dependency_interface_test.cmake  deferred_vendored_install_manifest_test.cmake  dependency_download_timeout_test.cmake  dependency_public_surface_test.cmake  devenv_compose_config_test.cmake  dist_dir_configure_test.cmake  host_dependency_root_layout_test.cmake  install_tree_sdk_test.cmake  libssh2_dependency_interface_test.cmake  lonejson_dependency_interface_test.cmake  lonejson_generator_reuse_test.cmake  lua_binding_source_layout_test.cmake  lua_external_sdk_contract_test.cmake  lua_release_package_test.cmake  lua_rock_install_and_run_test.cmake  package_archive_assertions.cmake  package_archives_test.cmake  package_script_targeting_test.cmake  packaging_portability_source_test.cmake  pslog_build_modes_test.cmake  pslog_dependency_download_name_test.cmake  public_api_boundary_test.cmake  release_checksums_stability_test.cmake  release_matrix_archives_test.cmake  release_package_matrix_targeting_test.cmake  release_privacy_scan.cmake  release_tarball_sdk_matrix_test.cmake  release_tarball_sdk_test.cmake  release_target_clang_guard_test.cmake  release_targeting_test.cmake  runtime_license_fallback_test.cmake  runtime_license_install_tree_test.cmake  version_resolution_probe.cmake  version_resolution_test.cmake  world_target_clang_guard_test.cmake  (+1 more)
tests/e2e/: CMakeLists.txt  test_lc_e2e.c  test_lockdc_lua_acquire_for_update.lua  test_lockdc_lua_bundle_sources.lua  test_lockdc_lua_consumer.lua  test_lockdc_lua_consumer_handler_error.lua  test_lockdc_lua_state_after_ack.lua
tests/fuzz/: CMakeLists.txt  fuzz_lc_attachment_decode.c  fuzz_lc_bundle_open.c  fuzz_lc_mutate_apply.c  fuzz_lc_mutate_parse.c  fuzz_lc_query_keys_stream.c  fuzz_lc_queue_meta.c  fuzz_lc_streams.c
tests/fuzz/corpus/attachment_decode/: attach.json  list.json
tests/fuzz/corpus/bundle_open/: seed.pem
tests/fuzz/corpus/mutate_apply/: seed-file.txt  seed-time.txt
tests/fuzz/corpus/mutate_parse/: seed-basic.txt  seed-invalid.txt
tests/fuzz/corpus/query_keys_stream/: chunk_failure  empty  escaped_utf8  two_keys
tests/fuzz/corpus/queue_meta/: meta.json
tests/fuzz/corpus/streams/: seed.json
tests/lua/: test_lockdc_core_smoke.lua  test_lockdc_facade_unit.lua  test_lockdc_luarocks_smoke.lua
tests/unit/: CMakeLists.txt  mock_lc_public.c  mock_lc_public.h  test_lc_consumer_service.c  test_lc_contracts.c  test_lc_engine_allocator.c  test_lc_mutate_stream.c  test_lc_public_mock_usage.c  test_lc_runtime.c  test_lc_streams.c  test_lc_transport_https.c
